(Fix) z-index in components

--- a/wisi-indie/src/app/components/subComponents/ModalContactUs.module.css
+++ b/wisi-indie/src/app/components/subComponents/ModalContactUs.module.css
@@ -10,6 +10,8 @@
 	position: relative;
 	border: 1px solid rgba(55, 46, 46, 0.6);
 	border-radius: 25px;
+  position: relative;
+  z-index: 10000;
 }
 
 .closeButton {
@@ -24,4 +26,9 @@
 	cursor: pointer;
   padding: 20px;
   font-family: var(--font-family-inter);
+  transition: transform .5s ease;
+}
+
+.closeButton:hover {
+  transform: rotate(180deg);
 }
